feat: Implement product management screen with CRUD operations
- Added ArticulosScreen for displaying, adding, editing, and deleting products.
- Integrated API calls for fetching and managing product data.
- Implemented error handling and loading states for better user experience.
- Created Navbar component for consistent navigation across screens.
- Developed CategoriesScreen to fetch and display product categories.
- Established MainLayout for overall app structure and styling.
- Set up proxy for API requests to handle CORS issues.
- Added utility function fetchJson for simplified API calls and error handling.

--- a/app.json
+++ b/app.json
@@ -36,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "navbar": {
+        "bgColor": "#FFFFFF",
+        "accentColor": "#0f4c81",
+        "textColor": "#1f2937",
+        "height": 64
+      }
     }
   }
 }
