--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-print": "~15.0.7",
     "expo-router": "~6.0.14",
+    "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "http-proxy-middleware": "^3.0.3",
-    "jest-expo": "~52.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -51,12 +52,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
-    "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
+    "jest": "^29.6.3",
     "jest-expo": "~54.0.13",
-    "react-test-renderer": "18.3.1",
     "typescript": "~5.9.2"
   },
   "private": true
