--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-print": "~15.0.7",
-    "expo-router": "~6.0.14",
+    "expo-router": "3.4.8",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -52,7 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.1.10",
+    "@types/react": "18.2.48",
     "jest": "^29.6.3",
     "jest-expo": "~54.0.13",
     "typescript": "~5.9.2"
